# python-web-server

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  maintenance.py
app/api/: deps.py  docs.py
app/api/routes/: convert.py  files.py  jobs.py  process.py  tools.py
app/callbacks/: webhook.py
app/core/: config.py
app/jobs/: tasks.py
app/schemas/: files.py  jobs.py  tools.py
app/storage/: base.py  local.py
app/tools/: agent_tools.py  base.py  document.py  file_tools.py  integration_tools.py  knowledge_tools.py  registry.py  utils.py
docs/: system-overview.md
tests/: conftest.py  test_auth_and_tools.py  test_convert_download.py  test_expanded_tools.py  test_files_and_conversions.py  test_jobs_task.py  test_openapi_docs.py  test_storage.py
