[project]
name = "python-ai-tool-server"
version = "0.1.0"
description = "FastAPI based tool gateway for AI agents and third-party systems."
requires-python = ">=3.12,<3.14"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "markdown>=3.7",
    "markdownify>=0.14.1",
    "pdf2docx>=0.5.8",
    "pillow>=11.0.0",
    "pydantic-settings>=2.7.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "redis>=5.2.1",
    "reportlab>=4.2.5",
    "rq>=2.0.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
